[gd_scene load_steps=7 format=3 uid="uid://dtmm02esssw6m"]

[ext_resource type="Script" path="res://Scenes/Start_Screen.gd" id="1_ljhr3"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets/Invaders/Invader3-1.png" id="2_rf32j"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="3_47jqt"]
[ext_resource type="Script" path="res://Scenes/StartScreen_Label.gd" id="4_5kd5g"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets/Invaders/Invader2-1.png" id="5_bw2uh"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets/Invaders/Invader1-1.png" id="6_jdqbf"]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_ljhr3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -122.0
offset_right = 218.5
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="InvderContainer1" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvderContainer1"]
texture_filter = 1
custom_minimum_size = Vector2(72, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_rf32j")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvderContainer1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_47jqt")
theme_override_font_sizes/font_size = 40
text = "= 10 Points"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_5kd5g")

[node name="InvderContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvderContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(72, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_bw2uh")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvderContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_47jqt")
theme_override_font_sizes/font_size = 40
text = "= 20 Points"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_5kd5g")

[node name="InvderContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvderContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(72, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_jdqbf")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/InvderContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_47jqt")
theme_override_font_sizes/font_size = 40
text = "= 40 Points"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_5kd5g")

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.345098, 0.67451, 0.780392, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.443137, 0.780392, 1)
theme_override_fonts/font = ExtResource("3_47jqt")
theme_override_font_sizes/font_size = 50
text = "PLAY!"
flat = true

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.338
anchor_top = 0.042
anchor_right = 0.662
anchor_bottom = 0.265
offset_left = 0.123962
offset_top = -0.216002
offset_right = -0.124084
offset_bottom = 0.279984
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.886262, 0.886261, 0.886262, 1)
theme_override_fonts/font = ExtResource("3_47jqt")
theme_override_font_sizes/font_size = 70
text = "SPACE
INVADERS"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("4_5kd5g")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Button" to="." method="_start_game_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout_show_next_container"]
